# ReconForge

./: .gitignore  README.md  REFACTORING_PLAN.md  pyproject.toml  test_architecture.py  test_imports.py
.superpowers/sdd/: progress.md
docs/superpowers/plans/: 2026-07-04-phase2-discovery-plugins.md
docs/superpowers/specs/: 2026-07-04-phase2-discovery-plugins-design.md
src/: re
src/reconforge/: __init__.py  cli.py
src/reconforge/core/: __init__.py  config.py  enhanced_pipeline.py  enhanced_plugin.py  loader.py  logging_setup.py  pipeline.py  plugin.py  projectdiscovery_provider.py  result.py  scheduler.py  tool_provider.py  tool_registry.py  tool_resolver.py
src/reconforge/plugins/: __init__.py  assetfinder.py  crtsh.py  dir_brute.py  dns_resolver.py  endpoints.py  headers.py  http_alive.py  http_fingerprint.py  httpx_alive.py  js_analyze.py  js_discovery.py  katana.py  merge_engine.py  naabu.py  nmap.py  (+14 more)
tests/: __init__.py  test_config.py  test_loader.py  test_logging.py  test_pipeline.py  test_plugin.py  test_result.py  test_scheduler.py  test_tool_resolver.py
tests/integration/: __init__.py  conftest.py  test_real_tools.py
tests/plugins/: __init__.py  test_assetfinder.py  test_crtsh.py  test_dns_resolver.py  test_endpoints.py  test_headers.py  test_http_fingerprint.py  test_httpx_alive.py  test_katana.py  test_merge_engine.py  test_naabu.py  test_nmap.py  test_normalize_url.py  test_robots_txt.py  test_screenshot.py  test_sitemap.py  test_subfinder.py  test_tech_detect.py  test_wayback.py  test_whois_lookup.py
tests/reporting/: test_reporting.py
(+9 files in other folders)
